<resources>
    <string name="app_name" translatable="false">Record Echoes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_user">User</string>
    <string name="welcome">Welcome</string>
    <string name="activated">Activated</string>
    <string name="inputmobilephone">Input Mobile Phone</string>
    <string name="sendcode">Send Code</string>
    <string name="album_art">Song cover</string>
    <string name="default_time" translatable="false">00:00</string>
    <string name="login">Login</string>
    <string name="inputcode">Please enter the verification code</string>
    <string name="inputphone">Please enter your mobile phone number.</string>
    <string name="password">password</string>
    <string name="username">UserName</string>
    <string name="scanqrcodelogin">Please use another device to log in with Kugou QR code.</string>
    <string name="login_qrcode">Login QR code</string>
    <string name="unactivated">Not logged in</string>
    <string name="unactivated_summary">Please log in to your account.</string>
    <string name="user_playlist">My playlist</string>
    <string name="play_user_creator">Founder:</string>
    <string name="playlist_all_play">Play all</string>
    <string name="api_no_ok">API Not ready</string>
    <string name="settings_audio_quality_info">Audio quality info</string>
    <string name="settings_audio_quality_info_summary">Show audio quality/format information on the player screen</string>
    <string name="spk_channel_out_mono">Mono</string>
    <string name="spk_channel_out_stereo">Stereo</string>
    <string name="spk_channel_out_quad">Quad</string>
    <string name="spk_channel_out_surround">Surround (4.0)</string>
    <string name="spk_channel_out_7point1_surround">Surround (7.1)</string>
    <string name="spk_channel_out_5point1">5.1</string>
    <string name="spk_channel_out_6point1">6.1</string>
    <string name="spk_channel_out_5point1point2">5.1.2</string>
    <string name="spk_channel_out_5point1point4">5.1.4</string>
    <string name="spk_channel_out_7point1point2">7.1.2</string>
    <string name="spk_channel_out_7point1point4">7.1.4</string>
    <string name="spk_channel_out_9point1point4">9.1.4</string>
    <string name="spk_channel_out_9point1point6">9.1.6</string>
    <string name="spk_channel_out_front_left">Front Left</string>
    <string name="spk_channel_out_front_right">Front Right</string>
    <string name="spk_channel_out_front_center">Front Center</string>
    <string name="spk_channel_out_low_frequency">Low Frequency</string>
    <string name="spk_channel_out_back_left">Back Left</string>
    <string name="spk_channel_out_back_right">Back Right</string>
    <string name="spk_channel_out_front_left_of_center">Front Left of Center</string>
    <string name="spk_channel_out_front_right_of_center">Front Right of Center</string>
    <string name="spk_channel_out_back_center">Back Center</string>
    <string name="spk_channel_out_side_left">Side Left</string>
    <string name="spk_channel_out_side_right">Side Right</string>
    <string name="spk_channel_out_top_center">Top Center</string>
    <string name="spk_channel_out_top_front_left">Top Front Left</string>
    <string name="spk_channel_out_top_front_center">Top Front Center</string>
    <string name="spk_channel_out_top_front_right">Top Front Right</string>
    <string name="spk_channel_invalid">Invalid</string>
    <string name="spk_channel_out_top_back_left">Top Back Left</string>
    <string name="spk_channel_out_top_back_center">Top Back Center</string>
    <string name="spk_channel_out_top_back_right">Top Back Right</string>
    <string name="spk_channel_out_top_side_left">Top Side Left</string>
    <string name="spk_channel_out_top_side_right">Top Side Right</string>
    <string name="spk_channel_out_bottom_front_left">Bottom Front Left</string>
    <string name="spk_channel_out_bottom_front_center">Bottom Front Center</string>
    <string name="spk_channel_out_bottom_front_right">Bottom Front Right</string>
    <string name="spk_channel_out_low_frequency_2">Low Frequency 2</string>
    <string name="spk_channel_out_front_wide_left">Front Wide Left</string>
    <string name="spk_channel_out_front_wide_right">Front Wide Right</string>
    <string name="spk_encoding_invalid">Invalid</string>
    <string name="spk_encoding_pcm_8bit">8-bit PCM</string>
    <string name="spk_encoding_pcm_16bit">16-bit PCM</string>
    <string name="spk_encoding_pcm_16bit_big_endian">16-bit PCM (big endian)</string>
    <string name="spk_encoding_pcm_24bit">24-bit PCM</string>
    <string name="spk_encoding_pcm_24bit_big_endian">24-bit PCM (big endian)</string>
    <string name="spk_encoding_pcm_32bit">32-bit (int) PCM</string>
    <string name="spk_encoding_pcm_32bit_big_endian">32-bit (int) PCM (big endian)</string>
    <string name="spk_encoding_pcm_float">32-bit (float) PCM</string>
    <string name="spk_encoding_mp3">MP3</string>
    <string name="spk_encoding_aac_lc">AAC-LC</string>
    <string name="spk_encoding_aac_he_v1">HE-AAC v1</string>
    <string name="spk_encoding_aac_he_v2">HE-AAC v2</string>
    <string name="spk_encoding_aac_xhe">xHE-AAC</string>
    <string name="spk_encoding_aac_eld">AAC-ELD</string>
    <string name="spk_encoding_aac_er_bsac">AAC ER BSAC</string>
    <string name="spk_encoding_ac3">AC-3</string>
    <string name="spk_encoding_e_ac3">E-AC-3</string>
    <string name="spk_encoding_e_ac3_joc">E-AC-3-JOC</string>
    <string name="spk_encoding_ac4">AC-4</string>
    <string name="spk_encoding_dts">DTS</string>
    <string name="spk_encoding_dts_hd">DTS-HD</string>
    <string name="spk_encoding_dolby_truehd">Dolby TrueHD</string>
    <string name="spk_encoding_opus">Opus</string>
    <string name="spk_encoding_dts_uhd_p2">DTS-X</string>
    <string name="spk_encoding_pcm_8_24bit">24-bit (8.24) PCM</string>
    <string name="spk_encoding_amr_wb">AMR-WB</string>
    <string name="spk_encoding_aac">AAC</string>
    <string name="spk_encoding_vorbis">Vorbis</string>
    <string name="spk_encoding_iec61937">IEC 61937</string>
    <string name="spk_encoding_amr_wb_plus">AMR-WB+</string>
    <string name="spk_encoding_amr_nb">AMR-NB</string>
    <string name="spk_encoding_evrc">EVRC</string>
    <string name="spk_encoding_evrcb">EVRC-B</string>
    <string name="spk_encoding_evrcwb">EVRC WB</string>
    <string name="spk_encoding_evrcnw">EVRC NW</string>
    <string name="spk_encoding_aac_adif">AAC ADIF</string>
    <string name="spk_encoding_wma">WMA</string>
    <string name="spk_encoding_wma_pro">WMA Pro</string>
    <string name="spk_encoding_mp2">MPEG-2</string>
    <string name="spk_encoding_qcelp">QCELP</string>
    <string name="spk_encoding_dsd">Direct Stream Digital</string>
    <string name="spk_encoding_flac">FLAC</string>
    <string name="spk_encoding_alac">ALAC</string>
    <string name="spk_encoding_ape" translatable="false">Monkey\'s Audio</string>
    <string name="spk_encoding_aac_adts" translatable="false">AAC in ADTS</string>
    <string name="spk_encoding_sbc" translatable="false">SBC</string>
    <string name="spk_encoding_aptx" translatable="false">aptX</string>
    <string name="spk_encoding_aptx_hd" translatable="false">aptX HD</string>
    <string name="spk_encoding_ldac" translatable="false">LDAC</string>
    <string name="spk_encoding_mat" translatable="false">Dolby MAT</string>
    <string name="spk_encoding_aac_latm" translatable="false">AAC in LATM</string>
    <string name="spk_encoding_celt" translatable="false">CELT</string>
    <string name="spk_encoding_aptx_adaptive" translatable="false">aptX Adaptive</string>
    <string name="spk_encoding_lhdc" translatable="false">LHDC</string>
    <string name="spk_encoding_lhdc_ll" translatable="false">LLAC (LHDC-LL)</string>
    <string name="spk_encoding_aptx_twsp" translatable="false">aptX TWS+</string>
    <string name="spk_encoding_lc3" translatable="false">LC3</string>
    <string name="spk_encoding_mpegh" translatable="false">MPEG-H</string>
    <string name="spk_encoding_iec60958" translatable="false">IEC 60958</string>
    <string name="spk_encoding_dts_uhd" translatable="false">DTS-UHD</string>
    <string name="spk_encoding_dra" translatable="false">DRA</string>
    <string name="spk_encoding_aptx_adaptive_qlea" translatable="false">aptX Adaptive over LE Audio</string>
    <string name="spk_encoding_aptx_adaptive_r4" translatable="false">aptX Adaptive R4</string>
    <string name="spk_encoding_dts_hd_ma" translatable="false">DTS-HD Master Audio</string>
    <string name="spk_encoding_aac_main" translatable="false">AAC Main</string>
    <string name="spk_encoding_aac_ssr" translatable="false">AAC-SSR</string>
    <string name="spk_encoding_aac_ltp" translatable="false">AAC-LTP</string>
    <string name="spk_encoding_aac_scalable" translatable="false">AAC Scalable</string>
    <string name="spk_encoding_aac_erlc" translatable="false">AAC ERLC</string>
    <string name="spk_encoding_aac_ld" translatable="false">AAC-LD</string>
    <string name="spk_encoding_aac_adts_main" translatable="false">AAC Main in ADTS</string>
    <string name="spk_encoding_aac_adts_lc" translatable="false">AAC-LC in ADTS</string>
    <string name="spk_encoding_aac_adts_ssr" translatable="false">AAC-SSR in ADTS</string>
    <string name="spk_encoding_aac_adts_ltp" translatable="false">AAC-LTP in ADTS</string>
    <string name="spk_encoding_aac_adts_he_v1" translatable="false">HE-AAC v1 in ADTS</string>
    <string name="spk_encoding_aac_adts_he_v2" translatable="false">HE-AAC v2 in ADTS</string>
    <string name="spk_encoding_aac_adts_xhe" translatable="false">xHE-AAC in ADTS</string>
    <string name="spk_encoding_aac_adts_ld" translatable="false">AAC-LD in ADTS</string>
    <string name="spk_encoding_aac_adts_scalable" translatable="false">AAC Scalable in ADTS</string>
    <string name="spk_encoding_aac_adts_erlc" translatable="false">AAC-ERLC in ADTS</string>
    <string name="spk_encoding_aac_adts_eld" translatable="false">AAC-ELD in ADTS</string>
    <string name="spk_encoding_aac_latm_lc" translatable="false">AAC-LC in LATM</string>
    <string name="spk_encoding_aac_latm_he_v1" translatable="false">HE-AAC v1 in LATM</string>
    <string name="spk_encoding_aac_latm_he_v2" translatable="false">HE-AAC v2 in LATM</string>
    <string name="spk_encoding_mat_1_0" translatable="false">Dolby MAT 1.0</string>
    <string name="spk_encoding_mat_2_0" translatable="false">Dolby MAT 2.0</string>
    <string name="spk_encoding_mat_2_1" translatable="false">Dolby MAT 2.1</string>
    <string name="user_info">User Info</string>
    <string name="user_fans">Fans</string>
    <string name="user_follows">Following</string>
    <string name="user_visitors">Visitors</string>
    <string name="user_last_time">Last Login Time:</string>
    <string name="user_lister_music_time">Listening Time:</string>
    <string name="fenzhong">minutes</string>
    <string name="user_birthday">Birthday:</string>
    <string name="user_occupation">Occupation:</string>
    <string name="user_level">| Level</string>
    <string name="settings_category_links">Links</string>
    <string name="settings_category_basic_info">Basic Info</string>
    <string name="settings_version">Version</string>
    <string name="settings_repository">Repository URL</string>
    <string name="setting_app_name_summary">Application name</string>
    <string name="unknown_version">Unknown version</string>
    <string name="settings_package_type">Package type</string>
    <string name="settings_open_source_licenses">Open source licenses</string>
    <string name="settings_contributors">Contributors</string>
    <string name="settings_nodejs_version">NodeJs Version</string>
    <string name="settings_git_hash">Git Hash</string>
    <string name="settings_build_time">Compilation time</string>
</resources>