<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2024 Akane Foundation
  ~
  ~     Gramophone is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     Gramophone is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_basic_info">

        <Preference
            android:key="app_name"
            android:layout="@layout/preference_basic"
            android:summary="@string/app_name"
            android:title="@string/setting_app_name_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="app_version"
            android:layout="@layout/preference_basic"
            android:summary="@string/unknown_version"
            android:title="@string/settings_version"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="package_type"
            android:layout="@layout/preference_basic"
            android:summary="@string/unknown_version"
            android:title="@string/settings_package_type"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="nodejs_version"
            android:layout="@layout/preference_basic"
            android:summary="@string/unknown_version"
            android:title="@string/settings_nodejs_version"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="git_hash"
            android:layout="@layout/preference_basic"
            android:summary="@string/unknown_version"
            android:title="@string/settings_git_hash"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="build_time"
            android:layout="@layout/preference_basic"
            android:summary="@string/unknown_version"
            android:title="@string/settings_build_time"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="contributors"
            android:layout="@layout/preference_basic"
            android:title="@string/settings_contributors"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="open_source_licenses"
            android:layout="@layout/preference_basic"
            android:title="@string/settings_open_source_licenses"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_md"
        android:title="@string/settings_category_links">

        <com.ghhccghk.musicplay.ui.components.NoAppFallbackPreference
            android:layout="@layout/preference_basic"
            android:summary="https://github.com/ghhccghk/KugouAndroidMusic"
            android:title="@string/settings_repository"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/ghhccghk/KugouAndroidMusic" />
        </com.ghhccghk.musicplay.ui.components.NoAppFallbackPreference>

    </PreferenceCategory>

</PreferenceScreen>
